--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,7 +3,26 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
 // Variables
-@import "variables";
+//@import "variables";
 
 // Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+//@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap";
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+}
+
+.map {
+  flex: 1 0;
+}
+
+.site-container {
+  @extend .container-fluid;
+  position: absolute;
+  margin-top: 1em;
+}
