--- a/public/css/app.css
+++ b/public/css/app.css
@@ -720,6 +720,7 @@ pre code {
 .col-8,
 .col-9,
 .col-10,
+.toolbar,
 .col-11,
 .col-12,
 .col,
@@ -867,7 +868,8 @@ pre code {
   max-width: 75%;
 }
 
-.col-10 {
+.col-10,
+.toolbar {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 83.33333333%;
           flex: 0 0 83.33333333%;
@@ -1998,10 +2000,12 @@ select.form-control:focus::-ms-value {
 .input-group-sm > .form-control-plaintext.form-control,
 .input-group-sm > .form-control-plaintext.input-group-addon,
 .input-group-sm > .input-group-btn > .form-control-plaintext.btn,
+.input-group-sm > .input-group-btn > .form-control-plaintext.statistics-btn,
 .form-control-plaintext.form-control-lg,
 .input-group-lg > .form-control-plaintext.form-control,
 .input-group-lg > .form-control-plaintext.input-group-addon,
-.input-group-lg > .input-group-btn > .form-control-plaintext.btn {
+.input-group-lg > .input-group-btn > .form-control-plaintext.btn,
+.input-group-lg > .input-group-btn > .form-control-plaintext.statistics-btn {
   padding-right: 0;
   padding-left: 0;
 }
@@ -2009,7 +2013,8 @@ select.form-control:focus::-ms-value {
 .form-control-sm,
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
-.input-group-sm > .input-group-btn > .btn {
+.input-group-sm > .input-group-btn > .btn,
+.input-group-sm > .input-group-btn > .statistics-btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -2019,14 +2024,16 @@ select.form-control:focus::-ms-value {
 select.form-control-sm:not([size]):not([multiple]),
 .input-group-sm > select.form-control:not([size]):not([multiple]),
 .input-group-sm > select.input-group-addon:not([size]):not([multiple]),
-.input-group-sm > .input-group-btn > select.btn:not([size]):not([multiple]) {
+.input-group-sm > .input-group-btn > select.btn:not([size]):not([multiple]),
+.input-group-sm > .input-group-btn > select.statistics-btn:not([size]):not([multiple]) {
   height: calc(1.8125rem + 2px);
 }
 
 .form-control-lg,
 .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
-.input-group-lg > .input-group-btn > .btn {
+.input-group-lg > .input-group-btn > .btn,
+.input-group-lg > .input-group-btn > .statistics-btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
@@ -2036,7 +2043,8 @@ select.form-control-sm:not([size]):not([multiple]),
 select.form-control-lg:not([size]):not([multiple]),
 .input-group-lg > select.form-control:not([size]):not([multiple]),
 .input-group-lg > select.input-group-addon:not([size]):not([multiple]),
-.input-group-lg > .input-group-btn > select.btn:not([size]):not([multiple]) {
+.input-group-lg > .input-group-btn > select.btn:not([size]):not([multiple]),
+.input-group-lg > .input-group-btn > select.statistics-btn:not([size]):not([multiple]) {
   height: calc(2.875rem + 2px);
 }
 
@@ -2300,7 +2308,8 @@ select.form-control-lg:not([size]):not([multiple]),
     display: inline-block;
   }
 
-  .form-inline .input-group {
+  .form-inline .input-group,
+  .form-inline .form-row {
     width: auto;
   }
 
@@ -2360,7 +2369,8 @@ select.form-control-lg:not([size]):not([multiple]),
   }
 }
 
-.btn {
+.btn,
+.statistics-btn {
   display: inline-block;
   font-weight: normal;
   text-align: center;
@@ -2382,29 +2392,39 @@ select.form-control-lg:not([size]):not([multiple]),
 }
 
 .btn:focus,
-.btn:hover {
+.statistics-btn:focus,
+.btn:hover,
+.statistics-btn:hover {
   text-decoration: none;
 }
 
 .btn:focus,
-.btn.focus {
+.statistics-btn:focus,
+.btn.focus,
+.focus.statistics-btn {
   outline: 0;
   -webkit-box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
           box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
 }
 
 .btn.disabled,
-.btn:disabled {
+.disabled.statistics-btn,
+.btn:disabled,
+.statistics-btn:disabled {
   opacity: .65;
 }
 
 .btn:active,
-.btn.active {
+.statistics-btn:active,
+.btn.active,
+.active.statistics-btn {
   background-image: none;
 }
 
 a.btn.disabled,
-fieldset[disabled] a.btn {
+a.disabled.statistics-btn,
+fieldset[disabled] a.btn,
+fieldset[disabled] a.statistics-btn {
   pointer-events: none;
 }
 
@@ -2472,33 +2492,42 @@ fieldset[disabled] a.btn {
   border-color: #6c757d;
 }
 
-.btn-success {
+.btn-success,
+.statistics-btn {
   color: #fff;
   background-color: #28a745;
   border-color: #28a745;
 }
 
-.btn-success:hover {
+.btn-success:hover,
+.statistics-btn:hover {
   color: #fff;
   background-color: #218838;
   border-color: #1e7e34;
 }
 
 .btn-success:focus,
-.btn-success.focus {
+.statistics-btn:focus,
+.btn-success.focus,
+.focus.statistics-btn {
   -webkit-box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.5);
           box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.5);
 }
 
 .btn-success.disabled,
-.btn-success:disabled {
+.disabled.statistics-btn,
+.btn-success:disabled,
+.statistics-btn:disabled {
   background-color: #28a745;
   border-color: #28a745;
 }
 
 .btn-success:active,
+.statistics-btn:active,
 .btn-success.active,
-.show > .btn-success.dropdown-toggle {
+.active.statistics-btn,
+.show > .btn-success.dropdown-toggle,
+.show > .dropdown-toggle.statistics-btn {
   background-color: #218838;
   background-image: none;
   border-color: #1e7e34;
@@ -2970,7 +2999,8 @@ fieldset[disabled] a.btn {
 }
 
 .btn-lg,
-.btn-group-lg > .btn {
+.btn-group-lg > .btn,
+.btn-group-lg > .statistics-btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   line-height: 1.5;
@@ -2978,7 +3008,8 @@ fieldset[disabled] a.btn {
 }
 
 .btn-sm,
-.btn-group-sm > .btn {
+.btn-group-sm > .btn,
+.btn-group-sm > .statistics-btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
@@ -3152,7 +3183,9 @@ tbody.collapse.show {
 }
 
 .btn-group > .btn,
-.btn-group-vertical > .btn {
+.btn-group > .statistics-btn,
+.btn-group-vertical > .btn,
+.btn-group-vertical > .statistics-btn {
   position: relative;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 auto;
@@ -3161,26 +3194,44 @@ tbody.collapse.show {
 }
 
 .btn-group > .btn:hover,
-.btn-group-vertical > .btn:hover {
+.btn-group > .statistics-btn:hover,
+.btn-group-vertical > .btn:hover,
+.btn-group-vertical > .statistics-btn:hover {
   z-index: 2;
 }
 
 .btn-group > .btn:focus,
+.btn-group > .statistics-btn:focus,
 .btn-group > .btn:active,
+.btn-group > .statistics-btn:active,
 .btn-group > .btn.active,
+.btn-group > .active.statistics-btn,
 .btn-group-vertical > .btn:focus,
+.btn-group-vertical > .statistics-btn:focus,
 .btn-group-vertical > .btn:active,
-.btn-group-vertical > .btn.active {
+.btn-group-vertical > .statistics-btn:active,
+.btn-group-vertical > .btn.active,
+.btn-group-vertical > .active.statistics-btn {
   z-index: 2;
 }
 
 .btn-group .btn + .btn,
+.btn-group .statistics-btn + .btn,
+.btn-group .btn + .statistics-btn,
+.btn-group .statistics-btn + .statistics-btn,
 .btn-group .btn + .btn-group,
+.btn-group .statistics-btn + .btn-group,
 .btn-group .btn-group + .btn,
+.btn-group .btn-group + .statistics-btn,
 .btn-group .btn-group + .btn-group,
 .btn-group-vertical .btn + .btn,
+.btn-group-vertical .statistics-btn + .btn,
+.btn-group-vertical .btn + .statistics-btn,
+.btn-group-vertical .statistics-btn + .statistics-btn,
 .btn-group-vertical .btn + .btn-group,
+.btn-group-vertical .statistics-btn + .btn-group,
 .btn-group-vertical .btn-group + .btn,
+.btn-group-vertical .btn-group + .statistics-btn,
 .btn-group-vertical .btn-group + .btn-group {
   margin-left: -1px;
 }
@@ -3196,24 +3247,29 @@ tbody.collapse.show {
           justify-content: flex-start;
 }
 
-.btn-toolbar .input-group {
+.btn-toolbar .input-group,
+.btn-toolbar .form-row {
   width: auto;
 }
 
-.btn-group > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
+.btn-group > .btn:not(:first-child):not(:last-child):not(.dropdown-toggle),
+.btn-group > .statistics-btn:not(:first-child):not(:last-child):not(.dropdown-toggle) {
   border-radius: 0;
 }
 
-.btn-group > .btn:first-child {
+.btn-group > .btn:first-child,
+.btn-group > .statistics-btn:first-child {
   margin-left: 0;
 }
 
-.btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+.btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle),
+.btn-group > .statistics-btn:first-child:not(:last-child):not(.dropdown-toggle) {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
 .btn-group > .btn:last-child:not(:first-child),
+.btn-group > .statistics-btn:last-child:not(:first-child),
 .btn-group > .dropdown-toggle:not(:first-child) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -3223,38 +3279,45 @@ tbody.collapse.show {
   float: left;
 }
 
-.btn-group > .btn-group:not(:first-child):not(:last-child) > .btn {
+.btn-group > .btn-group:not(:first-child):not(:last-child) > .btn,
+.btn-group > .btn-group:not(:first-child):not(:last-child) > .statistics-btn {
   border-radius: 0;
 }
 
 .btn-group > .btn-group:first-child:not(:last-child) > .btn:last-child,
+.btn-group > .btn-group:first-child:not(:last-child) > .statistics-btn:last-child,
 .btn-group > .btn-group:first-child:not(:last-child) > .dropdown-toggle {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
 
-.btn-group > .btn-group:last-child:not(:first-child) > .btn:first-child {
+.btn-group > .btn-group:last-child:not(:first-child) > .btn:first-child,
+.btn-group > .btn-group:last-child:not(:first-child) > .statistics-btn:first-child {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.btn + .dropdown-toggle-split {
+.btn + .dropdown-toggle-split,
+.statistics-btn + .dropdown-toggle-split {
   padding-right: 0.5625rem;
   padding-left: 0.5625rem;
 }
 
-.btn + .dropdown-toggle-split::after {
+.btn + .dropdown-toggle-split::after,
+.statistics-btn + .dropdown-toggle-split::after {
   margin-left: 0;
 }
 
 .btn-sm + .dropdown-toggle-split,
-.btn-group-sm > .btn + .dropdown-toggle-split {
+.btn-group-sm > .btn + .dropdown-toggle-split,
+.btn-group-sm > .statistics-btn + .dropdown-toggle-split {
   padding-right: 0.375rem;
   padding-left: 0.375rem;
 }
 
 .btn-lg + .dropdown-toggle-split,
-.btn-group-lg > .btn + .dropdown-toggle-split {
+.btn-group-lg > .btn + .dropdown-toggle-split,
+.btn-group-lg > .statistics-btn + .dropdown-toggle-split {
   padding-right: 0.75rem;
   padding-left: 0.75rem;
 }
@@ -3276,57 +3339,74 @@ tbody.collapse.show {
 }
 
 .btn-group-vertical .btn,
+.btn-group-vertical .statistics-btn,
 .btn-group-vertical .btn-group {
   width: 100%;
 }
 
 .btn-group-vertical > .btn + .btn,
+.btn-group-vertical > .statistics-btn + .btn,
+.btn-group-vertical > .btn + .statistics-btn,
+.btn-group-vertical > .statistics-btn + .statistics-btn,
 .btn-group-vertical > .btn + .btn-group,
+.btn-group-vertical > .statistics-btn + .btn-group,
 .btn-group-vertical > .btn-group + .btn,
+.btn-group-vertical > .btn-group + .statistics-btn,
 .btn-group-vertical > .btn-group + .btn-group {
   margin-top: -1px;
   margin-left: 0;
 }
 
-.btn-group-vertical > .btn:not(:first-child):not(:last-child) {
+.btn-group-vertical > .btn:not(:first-child):not(:last-child),
+.btn-group-vertical > .statistics-btn:not(:first-child):not(:last-child) {
   border-radius: 0;
 }
 
-.btn-group-vertical > .btn:first-child:not(:last-child) {
+.btn-group-vertical > .btn:first-child:not(:last-child),
+.btn-group-vertical > .statistics-btn:first-child:not(:last-child) {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.btn-group-vertical > .btn:last-child:not(:first-child) {
+.btn-group-vertical > .btn:last-child:not(:first-child),
+.btn-group-vertical > .statistics-btn:last-child:not(:first-child) {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.btn-group-vertical > .btn-group:not(:first-child):not(:last-child) > .btn {
+.btn-group-vertical > .btn-group:not(:first-child):not(:last-child) > .btn,
+.btn-group-vertical > .btn-group:not(:first-child):not(:last-child) > .statistics-btn {
   border-radius: 0;
 }
 
 .btn-group-vertical > .btn-group:first-child:not(:last-child) > .btn:last-child,
+.btn-group-vertical > .btn-group:first-child:not(:last-child) > .statistics-btn:last-child,
 .btn-group-vertical > .btn-group:first-child:not(:last-child) > .dropdown-toggle {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.btn-group-vertical > .btn-group:last-child:not(:first-child) > .btn:first-child {
+.btn-group-vertical > .btn-group:last-child:not(:first-child) > .btn:first-child,
+.btn-group-vertical > .btn-group:last-child:not(:first-child) > .statistics-btn:first-child {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
 [data-toggle="buttons"] > .btn input[type="radio"],
+[data-toggle="buttons"] > .statistics-btn input[type="radio"],
 [data-toggle="buttons"] > .btn input[type="checkbox"],
+[data-toggle="buttons"] > .statistics-btn input[type="checkbox"],
 [data-toggle="buttons"] > .btn-group > .btn input[type="radio"],
-[data-toggle="buttons"] > .btn-group > .btn input[type="checkbox"] {
+[data-toggle="buttons"] > .btn-group > .statistics-btn input[type="radio"],
+[data-toggle="buttons"] > .btn-group > .btn input[type="checkbox"],
+[data-toggle="buttons"] > .btn-group > .statistics-btn input[type="checkbox"] {
   position: absolute;
   clip: rect(0, 0, 0, 0);
   pointer-events: none;
 }
 
-.input-group {
+.input-group,
+.form-row {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3334,7 +3414,8 @@ tbody.collapse.show {
   width: 100%;
 }
 
-.input-group .form-control {
+.input-group .form-control,
+.form-row .form-control {
   position: relative;
   z-index: 2;
   -webkit-box-flex: 1;
@@ -3345,14 +3426,18 @@ tbody.collapse.show {
 }
 
 .input-group .form-control:focus,
+.form-row .form-control:focus,
 .input-group .form-control:active,
-.input-group .form-control:hover {
+.form-row .form-control:active,
+.input-group .form-control:hover,
+.form-row .form-control:hover {
   z-index: 3;
 }
 
 .input-group-addon,
 .input-group-btn,
-.input-group .form-control {
+.input-group .form-control,
+.form-row .form-control {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3363,7 +3448,8 @@ tbody.collapse.show {
 
 .input-group-addon:not(:first-child):not(:last-child),
 .input-group-btn:not(:first-child):not(:last-child),
-.input-group .form-control:not(:first-child):not(:last-child) {
+.input-group .form-control:not(:first-child):not(:last-child),
+.form-row .form-control:not(:first-child):not(:last-child) {
   border-radius: 0;
 }
 
@@ -3389,7 +3475,8 @@ tbody.collapse.show {
 
 .input-group-addon.form-control-sm,
 .input-group-sm > .input-group-addon,
-.input-group-sm > .input-group-btn > .input-group-addon.btn {
+.input-group-sm > .input-group-btn > .input-group-addon.btn,
+.input-group-sm > .input-group-btn > .input-group-addon.statistics-btn {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   border-radius: 0.2rem;
@@ -3397,7 +3484,8 @@ tbody.collapse.show {
 
 .input-group-addon.form-control-lg,
 .input-group-lg > .input-group-addon,
-.input-group-lg > .input-group-btn > .input-group-addon.btn {
+.input-group-lg > .input-group-btn > .input-group-addon.btn,
+.input-group-lg > .input-group-btn > .input-group-addon.statistics-btn {
   padding: 0.5rem 1rem;
   font-size: 1.25rem;
   border-radius: 0.3rem;
@@ -3409,12 +3497,17 @@ tbody.collapse.show {
 }
 
 .input-group .form-control:not(:last-child),
+.form-row .form-control:not(:last-child),
 .input-group-addon:not(:last-child),
 .input-group-btn:not(:last-child) > .btn,
+.input-group-btn:not(:last-child) > .statistics-btn,
 .input-group-btn:not(:last-child) > .btn-group > .btn,
+.input-group-btn:not(:last-child) > .btn-group > .statistics-btn,
 .input-group-btn:not(:last-child) > .dropdown-toggle,
 .input-group-btn:not(:first-child) > .btn:not(:last-child):not(.dropdown-toggle),
-.input-group-btn:not(:first-child) > .btn-group:not(:last-child) > .btn {
+.input-group-btn:not(:first-child) > .statistics-btn:not(:last-child):not(.dropdown-toggle),
+.input-group-btn:not(:first-child) > .btn-group:not(:last-child) > .btn,
+.input-group-btn:not(:first-child) > .btn-group:not(:last-child) > .statistics-btn {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
@@ -3424,12 +3517,17 @@ tbody.collapse.show {
 }
 
 .input-group .form-control:not(:first-child),
+.form-row .form-control:not(:first-child),
 .input-group-addon:not(:first-child),
 .input-group-btn:not(:first-child) > .btn,
+.input-group-btn:not(:first-child) > .statistics-btn,
 .input-group-btn:not(:first-child) > .btn-group > .btn,
+.input-group-btn:not(:first-child) > .btn-group > .statistics-btn,
 .input-group-btn:not(:first-child) > .dropdown-toggle,
 .input-group-btn:not(:last-child) > .btn:not(:first-child),
-.input-group-btn:not(:last-child) > .btn-group:not(:first-child) > .btn {
+.input-group-btn:not(:last-child) > .statistics-btn:not(:first-child),
+.input-group-btn:not(:last-child) > .btn-group:not(:first-child) > .btn,
+.input-group-btn:not(:last-child) > .btn-group:not(:first-child) > .statistics-btn {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
@@ -3444,36 +3542,48 @@ tbody.collapse.show {
   white-space: nowrap;
 }
 
-.input-group-btn > .btn {
+.input-group-btn > .btn,
+.input-group-btn > .statistics-btn {
   position: relative;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
 }
 
-.input-group-btn > .btn + .btn {
+.input-group-btn > .btn + .btn,
+.input-group-btn > .statistics-btn + .btn,
+.input-group-btn > .btn + .statistics-btn,
+.input-group-btn > .statistics-btn + .statistics-btn {
   margin-left: -1px;
 }
 
 .input-group-btn > .btn:focus,
+.input-group-btn > .statistics-btn:focus,
 .input-group-btn > .btn:active,
-.input-group-btn > .btn:hover {
+.input-group-btn > .statistics-btn:active,
+.input-group-btn > .btn:hover,
+.input-group-btn > .statistics-btn:hover {
   z-index: 3;
 }
 
 .input-group-btn:not(:last-child) > .btn,
+.input-group-btn:not(:last-child) > .statistics-btn,
 .input-group-btn:not(:last-child) > .btn-group {
   margin-right: -1px;
 }
 
 .input-group-btn:not(:first-child) > .btn,
+.input-group-btn:not(:first-child) > .statistics-btn,
 .input-group-btn:not(:first-child) > .btn-group {
   z-index: 2;
   margin-left: -1px;
 }
 
 .input-group-btn:not(:first-child) > .btn:focus,
+.input-group-btn:not(:first-child) > .statistics-btn:focus,
 .input-group-btn:not(:first-child) > .btn:active,
+.input-group-btn:not(:first-child) > .statistics-btn:active,
 .input-group-btn:not(:first-child) > .btn:hover,
+.input-group-btn:not(:first-child) > .statistics-btn:hover,
 .input-group-btn:not(:first-child) > .btn-group:focus,
 .input-group-btn:not(:first-child) > .btn-group:active,
 .input-group-btn:not(:first-child) > .btn-group:hover {
@@ -4634,7 +4744,8 @@ tbody.collapse.show {
   display: none;
 }
 
-.btn .badge {
+.btn .badge,
+.statistics-btn .badge {
   position: relative;
   top: -1px;
 }
@@ -9213,9 +9324,51 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1 0;
           flex: 1 0;
+  z-index: 10;
+}
+
+.map.is-hidden {
+  display: none;
+}
+
+.toolbar {
+  z-index: 100;
+  padding: 1em;
+}
+
+.toolbar-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.toolbar-form .filter-select {
+  border-radius: 0;
+  -webkit-appearance: none;
+  color: #495057;
+  border-right: 0;
+  padding: 0 1em;
+}
+
+.form-row {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+}
+
+.statistics-btn {
+  margin-left: 10em;
 }
 
 .site-container {
   position: absolute;
+  margin-top: 1em;
+}
+
+.article {
+  z-index: 1;
 }
 
