--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);/*!
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300|Roboto:100);/*!
  * Bootstrap v4.0.0-beta (https://getbootstrap.com)
  * Copyright 2011-2017 The Bootstrap Authors
  * Copyright 2011-2017 Twitter, Inc.
@@ -9312,6 +9312,12 @@ a.text-dark:hover {
 html,
 body {
   height: 100%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -9324,11 +9330,13 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1 0;
           flex: 1 0;
-  z-index: 10;
+  z-index: 0;
+  -webkit-animation: 0.3s ease-in-out all;
+          animation: 0.3s ease-in-out all;
 }
 
-.map.is-hidden {
-  display: none;
+.map.is-active {
+  z-index: 10;
 }
 
 .toolbar {
@@ -9343,6 +9351,10 @@ body {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
+  margin-top: 1em;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .toolbar-form .filter-select {
@@ -9359,13 +9371,18 @@ body {
           flex: 1 1;
 }
 
+.form-row.is-hidden {
+  display: none;
+}
+
 .statistics-btn {
   margin-left: 10em;
 }
 
 .site-container {
   position: absolute;
-  margin-top: 1em;
+  height: 100%;
+  background: #fff;
 }
 
 .article {
