--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -69,7 +69,7 @@ body {
 
 .statistics-btn {
   @extend .btn;
-  @extend .btn-success;
+  @extend .btn-primary;
 
   margin-left: 10em;
 }
@@ -83,4 +83,8 @@ body {
 
 .article {
   z-index: 1;
+
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 100;
+  }
 }
