--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 // Bootstrap
 //@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/select2/src/scss/core";
 
 html, body {
   height: 100%;
@@ -106,4 +107,25 @@ table {
   font-size: 1.25em;
   @extend .pt-4;
   text-align: justify;
+}
+
+span.select2 {
+  flex-grow: 1;
+  width: auto;
+}
+
+.select2 .select2-selection {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  height: 2.4em;
+  padding-top: 0.2em;
+  font-family: "Open Sans", sans-serif;
+}
+
+.select2 .select2-selection .select2-selection__arrow {
+  height: 2.1em;
+}
+
+.by-category, .by-category ~ .select2 {
+  display: none !important;
 }
